--- a/download.html
+++ b/download.html
@@ -31,7 +31,7 @@
     <div class="container">
         <h1>AAGNI</h1>
         <p>Your Ultimate AI Assistant for Productivity & Innovation</p>
-        <a href="https://github.com/arpanghosal0160/miniprj" class="download-btn" download>Download AAGNI</a>
+        <a href="https://github.com/arpanghosal0160/miniprj" class="download-btn" download>PROJECT AAGNI</a>
         
         <div class="features">
             <h2>Why Choose AAGNI?</h2>
@@ -54,7 +54,7 @@
                 <p>Lead Developer</p>
             </div>
             <div class="dev-card">
-                <img src="assets/dev2.jpg" alt="Developer 3">
+                <img src="assets/SASWATA.jpg" alt="Developer 3">
                 <h3>Saswata Ku. Nayak</h3>
                 <p>App Frontend Developer</p>
             </div>
@@ -70,7 +70,7 @@
             </div>
             
             <div class="dev-card">
-                <img src="assets/dev5.jpg" alt="Developer 3">
+                <img src="assets/RANI.png" alt="Developer 3">
                 <h3>Rani Rath</h3>
                 <p>App Frontend</p>
             </div>
