--- a/download.html
+++ b/download.html
@@ -75,7 +75,7 @@
                 <p>App Frontend</p>
             </div>
             <div class="dev-card">
-                <img src="assets/dev6.jpg" alt="Developer 3">
+                <img src="assets/ANISHA.png" alt="Developer 3">
                 <h3>Anisha Singh</h3>
                 <p>App Frontend</p>
             </div>
